previous WIP on granada post

--- a/source/_posts/2014-04-20-granada.markdown
+++ b/source/_posts/2014-04-20-granada.markdown
@@ -2,8 +2,8 @@
 layout: post
 title: "Granada"
 date: 2014-04-20 17:07
-tags: example, tag
-description: 
+tags: Granada, Spain, Alhambra
+description:
 published: false
 priority: 0.5
 ---
@@ -22,109 +22,164 @@ bags in their storage room and allowed me to eat breakfast.
 <!-- more -->
 
 Over breakfast I got talking with a friendly girl named Emily from Adelaide, and
-decided to go on a free walking tour with her and her other Adeladian friend
+decided to go on a free walking tour with her and her other Adelaidian friend
 Connor.
 
 
 The tour was led by a nice guy named Borja, a student who'd been living in
-Granada for some time. 
-Rachel from Chicago and Jack from Hobart
+Granada for some time. I also met some other friendly faces on the tour, Rachel
+from Chicago, and Jack from Hobart.
 
-orientation of the old part of the city
-
-hammam 
+The tour gave us a bit of an orientation of the old part of the city, and filled
+us in on a bit of the history of the city. Granada had been held by the Moores
+for quite some long period of time, which is why there's a lot of Moorish style
+architecture.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893631012/in/set-72157644104270734" title="Inside the Hamam by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3758/13893631012_de64238da4_c.jpg" width="601" height="800" alt="Inside the Hamam"></a>
 
-Interesting yo learn about the trouble unesco causes for people who can't afford
-to maintain their houses, huge fines and eventually having to give up their
-houses to unesco. Lots of abandoned properties.
+On structure we visited with this old hamman (?)
+
+One interesting thing I learn was about the trouble that UNESCO causes for the
+home owners in Granada who can't afford to maintain their houses to the level
+that UNESCO demands. This lead to huge fines and eventually having to give up
+their houses to UNESCO. Apparently there is a huge proportion of abandoned
+properties in the old city.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893651602/in/set-72157644104270734" title="A random courtyard our waking tour wandered into by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2933/13893651602_63856101f6_c.jpg" width="601" height="800" alt="A random courtyard our waking tour wandered into"></a>
 
-borja told he that he'd spent some time lviing in a cave house at one point.
-also that granada got a bit lonely because nobody stays for long, students come,
-study and leave so you only know people for a few years.
+There's also a quite a large number of cave house on the hill above Granada.
+Some of them have been there so long that they've been given land rights, while
+others are considered illegal dwellings and the police occasionally come by and
+evict lots of the people.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917231884/in/set-72157644104270734" title="This are apparently the original cave homes, they dont look very cave like anymore by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3680/13917231884_f6cf9e3973_c.jpg" width="800" height="601" alt="This are apparently the original cave homes, they dont look very cave like anymore"></a>
 
+Borja told us he that he'd spent some time living in a cave house at one point,
+looking after it for a friend, and told us what a friendly communal vibe the
+older area of caves had.
+
+He also let slip that Granada gets a bit lonely for young people because it's
+such a student town.  Nobody stays for very long. Students come, they study and
+then they leave so you only ever know people for a few years, tops.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917246354/in/set-72157644104270734" title="Blue and white ceramic Coke sign by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3715/13917246354_28b254f3fe_c.jpg" width="800" height="601" alt="Blue and white ceramic Coke sign"></a>
 
-after the tour ended Went and had tapas lunch with people from tour, 2€ for a
-beer and 3 tapas! orangised to meet up with everyone again the evening to see a
-band Borja was in perform.
+After the tour finished up, just about everyone from the tour went and had lunch
+at a tapas place, where the lunch special was 2€ for a beer and your choice of 3
+tapas from their huge buffet. Quite the bargain! We all organised to meet up
+again later in the evening to see a gig put on by a band that Borja played in.
 
-The beer and my tiredness meant I went back to the hostel and slept for a few hours.
+The 2-3 beers and my tiredness from not getting good rest on the overnight train
+meant that I went back to the hostel and slept for a few hours.
 
-found Em and Connor down in the common area and headed to the bar, the place was
-tiny! and jam packed. again every drink came with tapas, they'd ask you which
-drink you were up to because there was obviously a sequence that you got them
-served in.
+When I woke up I found Em and Connor down in the common area and we headed to
+the bar. The streets are pretty narrow and winding, I'm sure I would never have
+found the place if it weren't for Connor's superb navigation skills.
+
+The Venue was tiny! The table we initially sat down at turned out to double as
+a makeshift stage, so we shifted back a little to give the band some room. The
+place was jam packed too, although Borja later told us it gets busier than that.
+I don't know where they'd fit the people.
+
+Just about everywhere in Granada does some form of tapas with every drink. At
+this place they would ask you how many drinks you'd had each time you ordered
+another, and based on the number there was a certain sequence of little
+delicious snacks that you'd get to accompany your beverage.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13916878053/in/set-72157644104270734" title="Live music in a tiny little bar by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7152/13916878053_e23947d397_c.jpg" width="600" height="800" alt="Live music in a tiny little bar"></a>
 
-the band was great, very imformal feel to things, very expressive singing.
-rachel even broke out into song at one point, and boy can that girl sing. if
-being a chef gets old, she's got potential to make a living from that voice.
+The band was great, there was a very informal feel to things and the singing was
+very expressive. Rachel even broke out into song at one point, and can that girl
+sing! If being a chef gets old, she's got potential to make a living from that
+voice.
 
-
-Met up with Em and Connor at breakfast and decided to go up to the Alhambra
-together. Fell up two steps on the way and sprained my left ring finger :(
+The next morning I ran into Em and Connor again at breakfast and we decided to
+go up to the Alhambra together. On the walk there I managed to fall up a tiny
+flight of two stairs, and sprained my left ring finger :(
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13916827755/in/set-72157644104270734" title="Connor & Emily at the path to the Alhambra by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3816/13916827755_4ca281df1f_c.jpg" width="800" height="601" alt="Connor & Emily at the path to the Alhambra"></a>
 
-heard stories about how you needed to book days in advance, but we all got lucky
-and Got allocated a entry to the palace pretty much right away, so we headed
-straight there
-
-incredibly intricate carvings, so huge and so detailed. very impressive. some
-parts still painted, would have been amazing to see with the full colour
+We had all heard stories about how you needed to book days in advance, but we
+just turned up and got lucky, allocated a timeslot to enter the palace pretty
+much right away, so we dashed past the rest of the Alahabra grounds and headed
+straight there.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917389114/in/set-72157644104270734" title="Columns and carvings by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2928/13917389114_da6a381b04_c.jpg" width="800" height="601" alt="Columns and carvings"></a>
 
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13893863532/in/set-72157644104270734" title="Leave no surface uncarved by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7028/13893863532_392ee084ec_c.jpg" width="800" height="601" alt="Leave no surface uncarved"></a>
+The palace was full of incredibly intricate carvings, in many place the carvings
+went from the floor to the ceiling. It is hard to imagine how long it would have
+taken to carve it all out with so much detail.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893897796/in/set-72157644104270734" title="Rich colours by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3749/13893897796_085e34aa23_c.jpg" width="800" height="601" alt="Rich colours"></a>
 
+A few parts had been restored (several hundred years ago?) and still had some
+paint remaining. It would have been mind blowing to see the place fully painted
+back in the time it was used as a palace.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13893863532/in/set-72157644104270734" title="Leave no surface uncarved by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7028/13893863532_392ee084ec_c.jpg" width="800" height="601" alt="Leave no surface uncarved"></a>
+
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13916961855/in/set-72157644104270734" title="Beautiful patterns by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7353/13916961855_f16db6cb33_c.jpg" width="800" height="601" alt="Beautiful patterns"></a>
 
-interesting restoration technique where they embed the new material with UV
-reactive stuff, so it can appear “normal/fixed” to the naked eye but still be
-obvious which parts are truly original
+I learned about an interesting restoration technique from one of the info
+boards, where they embed the new material used in restoration with a UV reactive
+substance, so it appears plain to the naked eye but can still be obvious which
+parts are truly original to the historians studying the structure.
 
-rachel arrived and caught up with me, and the other girls sped off ahead during
-the palace visit
-
-me and rachel went and explored another building, a big square building, that
-had a circular open courtyard in the middle and some museums
+I went through the palace at a very slow pace, and at some point Rachel had
+arrived and caught up with me, and the two had moved through much quicker and
+finished well before us, so it was good that we'd organised to meet up somewhere
+later on if we got separated.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893925392/in/set-72157644104270734" title="Round courtyard by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2928/13893925392_1a7b0067cf_c.jpg" width="800" height="601" alt="Round courtyard"></a>
 
-went and explored the barracks and towers, ran into em and connor again
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13917480704/in/set-72157644104270734" title="Soldiers barracks by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7295/13917480704_933abe24e5_c.jpg" width="800" height="601" alt="Soldiers barracks"></a>
+Rachel and I ended up exploring the rest of the Alahabra grounds together. We
+found this huge square building that had a circular open courtyard in the
+middle, and now housed some museums and art galleries that we did an obligatory
+quick pass through.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917101303/in/set-72157644104270734" title="The view towards the new city by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7222/13917101303_643cec571e_c.jpg" width="800" height="450" alt="The view towards the new city"></a>
 
+We climbed up the towers next to the barracks, which gave a great view out to
+the city of Granada, and an interesting aerial view of the foundations of the
+barracks.
 
-headed up to the generlalife gardens, lots of fountains and water-staircase.
+<a href="http://www.flickr.com/photos/lucasthenomad/13917480704/in/set-72157644104270734" title="Soldiers barracks by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7295/13917480704_933abe24e5_c.jpg" width="800" height="601" alt="Soldiers barracks"></a>
+
+The time I'd organised to reconvene with Connor and Emily was quickly
+approaching, so it was very convenient when we ran into them again up on top of
+one of the towers, and agreed to scrap that plan and organised something else.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893944911/in/set-72157644104270734" title="Waterjets by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7235/13893944911_34bb93d54d_c.jpg" width="800" height="601" alt="Waterjets"></a>
+
+The last part of the complex we visited was the Generlalife gardens, which
+featured a lot of beautiful fountains and water gardens.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917089765/in/set-72157644104270734" title="Garden fountain by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2932/13917089765_9f4cbb3592_c.jpg" width="800" height="601" alt="Garden fountain"></a>
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893979231/in/set-72157644104270734" title="The Water Stairway by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7133/13893979231_d013b17942_c.jpg" width="601" height="800" alt="The Water Stairway"></a>
 
-went and had tapas and beers with Rachael at a little place called restaurante
-boabdil, tiny little place with stainless steel benches and little bay-maries
-full of food. very utilitarian vibe, but the food was super tasty and the beers
-were only 1.70E
+On the little booklet about the Alahabra it makes special mention of a
+water-staircase, so Rachel and I got it into out heads it would be something
+quite impressive to behold. Instead it turned out to be a pretty plain old
+staircase with a little channel of water running down the hand-rail of either
+side, be we made up a story about how it must of at least be special royal
+water, not the regular peasant stuff they give to everyone else.
 
-met up with Em and Connor, then went to the fountain to meet up with Borja to go
-on the cave tour. Jack also made it back for the tour and had apparently been up
-to the Alhambra as well although we missed him
+All the walking around the Alhambra had made us a bit hungry so we sought out
+somewhere to have a few beers and the free tapas they'd come with. We passed by
+a lot of places that seemed a little too fancy to offer a good beer and tapas
+deal, and eventually found a cute little place called Boabdil. It was a small
+place down a little alleyway, off another alleyway with very utilitarian decor.
+Stainless steel benches, fixed stools and bay-maries full of food. It turned out
+to be a great choice, with really tasty food and the drinks were only 1.70!
+
+We got a message from Em and Connor and let them know where we were, so we could
+regroup and head the fountain, meeting place of the afternoon walking tour to
+the caves on the hill that we wanted to do. It turned out it was being led again
+by Borja, a lovely surprise. Jack was also back for more, and had apparently
+been up to the Alhambra that day as well, although we didn't manage to bump into
+him.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917536504/in/set-72157644104270734" title="The illegal cave homes on the hill by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7366/13917536504_2e47accf22_c.jpg" width="800" height="601" alt="The illegal cave homes on the hill"></a>
 
