--- a/source/_posts/2014-04-20-granada.markdown
+++ b/source/_posts/2014-04-20-granada.markdown
@@ -178,113 +178,163 @@ We got a message from Em and Connor and let them know where we were, so we could
 regroup and head the fountain, meeting place of the afternoon walking tour to
 the caves on the hill that we wanted to do. It turned out it was being led again
 by Borja, a lovely surprise. Jack was also back for more, and had apparently
-been up to the Alhambra that day as well, although we didn't manage to bump into
-him.
+been up to the Alhambra that day as well, although we somehow never crossed
+paths.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917536504/in/set-72157644104270734" title="The illegal cave homes on the hill by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7366/13917536504_2e47accf22_c.jpg" width="800" height="601" alt="The illegal cave homes on the hill"></a>
 
-Cave tour took us up the hill to a few nice view points, then up to the hippy
-caves, only a few of who have power via solar panels. even these caves were a
-lot more established than I had been expecting
+The cave tour took us up the hill behind the old city, past a few nice view
+points of the Alhambra and the old city itself with the sun setting behind it.
+Then eventually up among the (illegal) hippy caves, of which only a few of who
+have electricity via solar panels. I was surprised to find that even these caves
+were a lot more established than I had been expecting when I first heard "cave
+house."
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917167763/in/set-72157644104270734" title="Now that looks like a cave home by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5163/13917167763_e40557b381_c.jpg" width="800" height="601" alt="Now that looks like a cave home"></a>
 
-Went right up to a nice wall to sit on and watch the sun set, then walked down
-the other side via the less established cave section. random couch overlooking
-the valley. got told about an old dude running a tea cafe out of a cave over the
-other side of the hills.
+We went right up the top where a church (?) with a nice wall to sit on was built,
+where we could sit and watch the sun set.
+
+After the sun had set we walked down the back side of the hill, via
+the newer, less established area of caves. We learned that there's an old hippy
+dude way further over in the hills who's lived there for years and runs a little
+tetería there, a possible excursion for another day.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894015226/in/set-72157644104270734" title="Jack, Rachel, Borja, Emily and Connor, watching the sunset by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7402/13894015226_a458e0d9de_c.jpg" width="800" height="601" alt="Jack, Rachel, Borja, Emily and Connor, watching the sunset"></a>
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893997112/in/set-72157644104270734" title="Epic sunset by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7396/13893997112_065be83db3_c.jpg" width="800" height="450" alt="Epic sunset"></a>
 
 
-tour ended and we went on a little tapas crawl, first place had awesome jamon,
-next place had delicious cheese and jamon
+After tour ended the group went on a little tapas crawl to various bars, in the
+interest of getting a good feed and a few drinks into us. The first place served
+us awesome Spanish ham, with legs of ham hung up all around the place. The
+second gave us delicious cheese and more ham, so tasty that we stayed for a few
+rounds.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917211833/in/set-72157644104270734" title="The Alhambra at night by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3706/13917211833_b89bf08c6d_c.jpg" width="800" height="450" alt="The Alhambra at night"></a>
 
-went to a flamenco show, only 6E. was worth seeing, but not something I’d seek
-out again. the dancing is impressive but the singing isn’t to my liking and the
-little cave/basement it was in was pretty dingy.
-
 <a href="http://www.flickr.com/photos/lucasthenomad/13894038541/in/set-72157644104270734" title="Flamenco show by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7389/13894038541_a0f16743cd_c.jpg" width="800" height="601" alt="Flamenco show"></a>
 
-next day
-
-went up to the Alhambra gardens with Em, Connor and Rachael
+Next stop was a flamenco show at a little cave venue, for the princely sum of
+6E. It was worth seeing for the sake of saying you'd done it, but it wasn't
+really something I'd seek out again. The dancing is enthusiastic but I found the
+singing kind of whiny and not really to my liking, and the little cave/basement
+it was in was pretty dark and dingy.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894058432/in/set-72157644104270734" title="Lovely gardens by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7074/13894058432_536c27a832_c.jpg" width="800" height="601" alt="Lovely gardens"></a>
 
-Went and found ismael, the hippy dude who lived over the hill in a cave and ran
-a teteria. beautiful view and amazingly fancy tapas with our tea
+The next day I went up to explore the gardens just below the Alhambra with Em,
+Connor and Rachael. They were lovely and peaceful, any very well manicured.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894089151/in/set-72157644104270734" title="Having tea at Ishmael's cave tetería by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7279/13894089151_0dac8cbf10_c.jpg" width="800" height="450" alt="Having tea at Ishmael's cave tetería"></a>
 
+After we'd finished exploring there, we decided to go and try and find the
+Tetería we'd been told about the evening before, run by the old hippy dude
+Ismael. After stopping to ask the locals which path to take a few times we
+managed to find our way around the hill to to tetería which had a stunning view.
+
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13894101056/in/set-72157644104270734" title="Fanciest tea + tapas ever! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7273/13894101056_828b2b23a1_c.jpg" width="800" height="600" alt="Fanciest tea + tapas ever!"></a>
 
-hung out at the hostel for a bit, then went out for a drink with the girls,
-before em and Connor had to go get their lift to seville
+We each had a tea which came out beautifully presented, each with it's own tasty
+fruit tapas sitting on top!
 
-went to Nuestro Bar, recommended by Chris Kolester with Rachel, fairly large
-serves of lots of fried food. very cheap, but not the best quality
+In the evening Em and Connor had to go and meet up with someone who was giving
+them a lift to Seville, but Rachael and I went to try and find Nuestro bar, a
+place that a friend who lived here for a while had told me about.
 
-Went exploring with rachael, started in the jewish district, then went over
-where there was supposed to be lots of graffiti, then went over around the
-cathedral
+After walking for what seemed like forever we found the place. It would have
+been an ideal hangout for students (and backpackers!) on a tight budget. The
+drink prices were very cheap and the tapas consisted of fried food in fairly
+large serves, even if it was lacking a little in the quality department.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894138352/in/set-72157644104270734" title="The Jewish district by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2909/13894138352_ae5d9cbba3_c.jpg" width="800" height="601" alt="The Jewish district"></a>
 
+The next morning I went exploring the old city with Rachael. We started in the
+Jewish district, which had many cobblestone paths featuring the star of David.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13894162272/in/set-72157644104270734" title="Cobblestone artwork by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7176/13894162272_0f3cbee403_c.jpg" width="800" height="601" alt="Cobblestone artwork"></a>
+
+The surrounding area had lots of very ornate cobblestone paths in lots of
+different patterns.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894176706/in/set-72157644104270734" title="Street art Owl in Granada by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7052/13894176706_bbd2e3d2a6_c.jpg" width="800" height="601" alt="Street art Owl in Granada"></a>
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13894193162/in/set-72157644104270734" title="Caracol by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2939/13894193162_206b181be6_c.jpg" width="800" height="601" alt="Caracol"></a>
+We explored around an area that our little tourist map told us was full of
+street art and found quite a few very nice pieces.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894207302/in/set-72157644104270734" title="Bicycle powered merry-go-round by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7409/13894207302_8c4727d226_c.jpg" width="800" height="601" alt="Bicycle powered merry-go-round"></a>
 
-Gypsy ladies trying to give us rosemary, shouting at us in spanish, rachel
-thinks they cursed her
+We ventured past a Christmas market in which it seemed like all of the
+children's rides were human powered, for example this merry-go-round was turned
+by a guy peddling a bicycle that was attached. Not sure if they're doing it to
+save money on a motor, or to be environmentally friendly, but it seemed pretty
+cool to me.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917758144/in/set-72157644104270734" title="Freaky street performer in front of a church by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3733/13917758144_ca2e006565_c.jpg" width="601" height="800" alt="Freaky street performer in front of a church"></a>
 
-went and found alahabra beer at a pretty nice tapas place for lunch. had bacon
-cheese rolls, prawns, chorizo, delicious spicy salty squid
+We passed by the Cathedral and saw this very freaky looking street performer
+doing a "living statue" thing, which I stealthily took a photo of under the
+guise of taking a picture of the church. When we got to close to the cathedral
+some old gypsy ladies swarmed us, trying to give us rosemary, shouting stuff at
+us in Spanish. I didn't want a bar of it but Rachel initially accepted their
+rosemary before she realised they wanted money from her, and afterwards decided
+that they probably put a curse on her.
 
-went for a walk/hike along the other side of the river, nice view of the caves,
-found some more caves on that side of the river too.
+At lunchtime we sought out a place serving Alahabra brand beer (I seem to have
+failed to note what the common beer was in my notes), and we found a great tapas
+place that gave us bacon wrapped cheese rolls, prawns, chorizo, and delicious
+spicy salty squid. I'm salivating just thinking about it.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894696952/in/set-72157644104270734" title="Band jamming by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5030/13894696952_83c956412f_c.jpg" width="800" height="600" alt="Band jamming"></a>
 
+We decided to spend the afternoon doing a short hike we'd heard about that ran
+along the other side of the river, and on out way there we happened to pass some
+buskers that included the singer dude from the band a few nights earlier.
+
 <a href="http://www.flickr.com/photos/lucasthenomad/13918252094/in/set-72157644104270734" title="Kings and knights patrolling by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7073/13918252094_7952020765_c.jpg" width="800" height="600" alt="Kings and knights patrolling"></a>
+
+Then a King and a bunch of knights happened to wander past us. Just your average
+day in Granada!
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894721682/in/set-72157644104270734" title="Looking back towards Granada and the hill of cave homes by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2935/13894721682_474a0e52c5_c.jpg" width="800" height="450" alt="Looking back towards Granada and the hill of cave homes"></a>
 
-went exploring up the hill again in search of snail restaurant, but sadly it was
-closed. energy levels plummeting, came down the hill and parted ways for a few
-hours to rest and sort out my plans for cordoba
+We eventually made it to the other side of the river, and followed the path
+along to quite a nice view of the caves, and found some more caves on the other
+side of the river too. Caves everywhere!
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13894193162/in/set-72157644104270734" title="Caracol by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2939/13894193162_206b181be6_c.jpg" width="800" height="601" alt="Caracol"></a>
+
+Rachael and I went and tracked down a restaurant we passed on the walking tour
+the first day that served snails. Rachel, being a chef, wanted to see how the
+Spanish served them, and I'm always eager to try strange foods. We did manage to
+find it, but it was disappointingly closed.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894756511/in/set-72157644104270734" title="Tapas menu by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3694/13894756511_c3bbfc3231_c.jpg" width="600" height="800" alt="Tapas menu"></a>
 
-Met up with Rachael and went to Babel tapas bar, world fusion food. very tasty
-but the service was very poor. two drinks and tapas took probably and hour and a
-half.
-
-then went back to the ultra budget place from the other day, delicious tapas,
-cheerful bartender, beer had a funny taste but was cheap enough to make up for
-it. ordered some snails, a huge bowl full (like 40 snails or something) they
-were kind of odd textured, but not particularly great. I prefer the french style
-ones where you get 6 and they just taste like butter and garlic.
+I'd looked up a list of best tapas places in Granada and we went to one called
+Babel tapas bar, which claimed to serve world fusion food. The food was great but
+the service was pretty poor. It took use nearly two hours to get two drinks each
+and tapas. I happened to take a photo of the menu to give you an idea of the
+sorts of stuff you get to pick from when you're buying a beer in one of these
+places.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894758262/in/set-72157644104270734" title="Giant bowl of snails by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3732/13894758262_17d7c170de_c.jpg" width="600" height="800" alt="Giant bowl of snails"></a>
+
+We ended up going back to the ultra budget place from the previous day, in which
+the very cheerful bartender was quick to serve us drinks and delicious tapas.
+We saw they offered snails as a non-tapas dish, so we ordered a serve to try
+them. What came out what a giant bowl full of snails, probably 40+ of them. I
+though they had a kind of odd texture and weren't anything to write home about.
+I think I prefer the French style ones where you only get a few and they're
+drowned in butter and garlic.
+
 
 went to los diamontes, seafood tapas place. pretty disappointing. very noisy, no
 music and the prawns they served us were still with shells
 
 decided to call it a night after that
 
-checked out of hostel and then chilled in the common area for a while on my
-laptop
 
 went out to have a look at clothing shops around granada, so many awesome hippy
 clothes, loads of stuff way different than anything at rainbow serpent, lots of
@@ -293,12 +343,3 @@ it made in nepal. I should go there on a shopping trip
 got the bus to Plaza de Toro to meet Andrés, the guy from blablacar who I got a
 lift to Cordoba with. He drove quite a nice BMW, only 2 doors and actually kind
 of cramped with 4 people in it but a pleasant experience all the same
-
-found hostel, feels like I may be the only person in there
-
-went out for a little explore of the town, very quiet, admittedly it is sunday
-night
-
-had Flamenquín for dinner, restaurant empty, pretty overpriced
-
-came back to hostel, pretty tired. room to myself
