Finished second pass

--- a/source/_posts/2014-04-20-granada.markdown
+++ b/source/_posts/2014-04-20-granada.markdown
@@ -329,17 +329,23 @@ though they had a kind of odd texture and weren't anything to write home about.
 I think I prefer the French style ones where you only get a few and they're
 drowned in butter and garlic.
 
+We finished up the night at a place called Los Diamontes a seafood tapas place
+which had rave reviews.  Unfortunately I think we must have gone to the wrong
+one (there seems to be two with the same name in Granada). We got a serve of
+regular sized prawns, shells and all :/ It was very noisy, all hard surfaces and
+no music or anything to help with that. It felt like being in a shopping centre
+food court except without the muzak. We decided to call it a night after that.
 
-went to los diamontes, seafood tapas place. pretty disappointing. very noisy, no
-music and the prawns they served us were still with shells
+My last day in Granada I went out to have a look at some of the clothing shops
+around the old city. There was lots of awesome hippy-style clothes, all of which
+would fit in at the Rainbow Serpent market but very little of which actually
+looked like designs I'd seen at Rainbow Serpent. I checked the tags on a few
+things and most of it seems to be made in Nepal. Seems like it would be a good
+place to go on a shopping trip.
 
-decided to call it a night after that
-
-
-went out to have a look at clothing shops around granada, so many awesome hippy
-clothes, loads of stuff way different than anything at rainbow serpent, lots of
-it made in nepal. I should go there on a shopping trip
-
-got the bus to Plaza de Toro to meet Andrés, the guy from blablacar who I got a
-lift to Cordoba with. He drove quite a nice BMW, only 2 doors and actually kind
-of cramped with 4 people in it but a pleasant experience all the same
+Leaving Granada I tried using a ride sharing website I'd just learnt about
+called Blablacar. I organised to get a lift to Cordoba, my next stop, with a guy
+who was living in Granada on the weekends and working in Cordoba during the
+week. He drove a fairly flash 2 door BMW, which was actually kind of cramped
+with 4 people in it, but all in all it was a good experience. Seems like the
+future of hitchhiking to me.
