--- a/source/_posts/2014-04-20-granada.markdown
+++ b/source/_posts/2014-04-20-granada.markdown
@@ -8,49 +8,49 @@ published: false
 priority: 0.5
 ---
 
-From Barcelona I got the overnight train to Granada. It left quite late in the
-evening, and arrived in Granada at about 9 the next morning. I had some sleeping
+From Barcelona I caught the overnight train to Granada. It left fairly late in the
+evening and arrived in Granada at about 9am the next morning. I had some sleeping
 pills and slept as well as is possible on a train, but was still exhausted when
 I arrived.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13916722755/in/set-72157644104270734" title="The courtyard at my hostel in Granada by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2900/13916722755_b4e79f4e47_c.jpg" width="601" height="800" alt="The courtyard at my hostel in Granada"></a>
 
-I headed to the hostel that I'd looked up online beforehand and checked that
-they had a bed for me. It was too early to check in but they let me lock up my
-bags in their storage room and allowed me to eat breakfast.
+I headed straight to a hostel that I'd looked up online beforehand and checked
+that they had a bed for me. It was too early to check in but they let me lock up
+my bags in their storage room and allowed me to take advantage of their
+breakfast buffet.
 
 <!-- more -->
 
-Over breakfast I got talking with a friendly girl named Emily from Adelaide, and
-decided to go on a free walking tour with her and her other Adelaidian friend
+Over breakfast I got talking with a friendly girl named Emily from Adelaide, who
+convinced me to go on a free walking tour with her and her other Adelaidian friend
 Connor.
 
-
 The tour was led by a nice guy named Borja, a student who'd been living in
-Granada for some time. I also met some other friendly faces on the tour, Rachel
+Granada for some time. I also met some other friendly faces on the tour, Rachael
 from Chicago, and Jack from Hobart.
 
+<a href="http://www.flickr.com/photos/lucasthenomad/13893631012/in/set-72157644104270734" title="Inside the Hamam by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3758/13893631012_de64238da4_c.jpg" width="601" height="800" alt="Inside an old Hamam (bath-house)"></a>
+
 The tour gave us a bit of an orientation of the old part of the city, and filled
-us in on a bit of the history of the city. Granada had been held by the Moores
-for quite some long period of time, which is why there's a lot of Moorish style
-architecture.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13893631012/in/set-72157644104270734" title="Inside the Hamam by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3758/13893631012_de64238da4_c.jpg" width="601" height="800" alt="Inside the Hamam"></a>
-
-On structure we visited with this old hamman (?)
+us in on a bit of the history of the city. Granada had been held by the Moors
+for quite a long period of time, which is why there's a lot of Moorish style
+architecture around the city.
 
 One interesting thing I learn was about the trouble that UNESCO causes for the
 home owners in Granada who can't afford to maintain their houses to the level
-that UNESCO demands. This lead to huge fines and eventually having to give up
+that UNESCO requires. This lead to huge fines and eventually having to give up
 their houses to UNESCO. Apparently there is a huge proportion of abandoned
-properties in the old city.
+properties in the old city caused by this. It's troublesome to think about, you
+want these places looked after, but it seems cruel and wasteful to force the
+owners out because they can't afford the maintenance.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893651602/in/set-72157644104270734" title="A random courtyard our waking tour wandered into by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2933/13893651602_63856101f6_c.jpg" width="601" height="800" alt="A random courtyard our waking tour wandered into"></a>
 
-There's also a quite a large number of cave house on the hill above Granada.
-Some of them have been there so long that they've been given land rights, while
-others are considered illegal dwellings and the police occasionally come by and
-evict lots of the people.
+There's quite a large number of cave house on the hill above Granada. Some of
+them have been there so long that the people living in them have been given land
+rights, while others are considered illegal dwellings and the police
+occasionally come by and evict lots of the people.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917231884/in/set-72157644104270734" title="This are apparently the original cave homes, they dont look very cave like anymore by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3680/13917231884_f6cf9e3973_c.jpg" width="800" height="601" alt="This are apparently the original cave homes, they dont look very cave like anymore"></a>
 
@@ -60,49 +60,49 @@ older area of caves had.
 
 He also let slip that Granada gets a bit lonely for young people because it's
 such a student town.  Nobody stays for very long. Students come, they study and
-then they leave so you only ever know people for a few years, tops.
+then they leave so you only ever know people for a few years maximum.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917246354/in/set-72157644104270734" title="Blue and white ceramic Coke sign by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3715/13917246354_28b254f3fe_c.jpg" width="800" height="601" alt="Blue and white ceramic Coke sign"></a>
 
-After the tour finished up, just about everyone from the tour went and had lunch
-at a tapas place, where the lunch special was 2€ for a beer and your choice of 3
-tapas from their huge buffet. Quite the bargain! We all organised to meet up
+After the tour finished up, just about everyone on the tour went and had lunch
+at a tapas place, where the lunch special was €2 for a beer and your choice of 3
+tapas from their huge buffet. Quite a bargain! We all organised to meet up
 again later in the evening to see a gig put on by a band that Borja played in.
 
-The 2-3 beers and my tiredness from not getting good rest on the overnight train
-meant that I went back to the hostel and slept for a few hours.
+The 2-3 beers, and my tiredness from not getting good rest on the overnight train,
+meant that I spent my afternoon back at the hostel and slept for a few hours.
 
 When I woke up I found Em and Connor down in the common area and we headed to
-the bar. The streets are pretty narrow and winding, I'm sure I would never have
-found the place if it weren't for Connor's superb navigation skills.
+the bar where the band was to play. The streets are pretty narrow and winding,
+I'm sure I would never have found the place if it weren't for Connor's superb
+navigation skills.
 
-The Venue was tiny! The table we initially sat down at turned out to double as
-a makeshift stage, so we shifted back a little to give the band some room. The
-place was jam packed too, although Borja later told us it gets busier than that.
-I don't know where they'd fit the people.
+The Venue was tiny! The table in the corner we initially sat down at turned out
+to double as a makeshift stage, so we shifted back a little to give the band
+some room. The place felt jam packed too, although Borja later told us it gets
+busier than that.  I don't know where they'd fit the people.
 
-Just about everywhere in Granada does some form of tapas with every drink. At
+Just about everywhere in Granada does some form of tapas with your drinks. At
 this place they would ask you how many drinks you'd had each time you ordered
 another, and based on the number there was a certain sequence of little
 delicious snacks that you'd get to accompany your beverage.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13916878053/in/set-72157644104270734" title="Live music in a tiny little bar by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7152/13916878053_e23947d397_c.jpg" width="600" height="800" alt="Live music in a tiny little bar"></a>
 
-The band was great, there was a very informal feel to things and the singing was
-very expressive. Rachel even broke out into song at one point, and can that girl
-sing! If being a chef gets old, she's got potential to make a living from that
-voice.
+The band was great, lots of good covers, and there was a nice informal feel to
+things. Rachael even broke out into song at one point, and can that girl sing!
+If being a chef gets old, she's got potential to make a living from that voice.
 
 The next morning I ran into Em and Connor again at breakfast and we decided to
 go up to the Alhambra together. On the walk there I managed to fall up a tiny
-flight of two stairs, and sprained my left ring finger :(
+set of two stairs, and sprained my left ring finger. ouch! :(
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13916827755/in/set-72157644104270734" title="Connor & Emily at the path to the Alhambra by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3816/13916827755_4ca281df1f_c.jpg" width="800" height="601" alt="Connor & Emily at the path to the Alhambra"></a>
 
 We had all heard stories about how you needed to book days in advance, but we
-just turned up and got lucky, allocated a timeslot to enter the palace pretty
-much right away, so we dashed past the rest of the Alahabra grounds and headed
-straight there.
+just turned up and got lucky. We were allocated a timeslot to enter the palace
+pretty much right away, so we dashed past the rest of the Alhambra grounds and
+headed straight there.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917389114/in/set-72157644104270734" title="Columns and carvings by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2928/13917389114_da6a381b04_c.jpg" width="800" height="601" alt="Columns and carvings"></a>
 
@@ -112,28 +112,27 @@ taken to carve it all out with so much detail.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893897796/in/set-72157644104270734" title="Rich colours by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3749/13893897796_085e34aa23_c.jpg" width="800" height="601" alt="Rich colours"></a>
 
-A few parts had been restored (several hundred years ago?) and still had some
+A few parts had been restored (several hundred years ago IIRC) and still had some
 paint remaining. It would have been mind blowing to see the place fully painted
 back in the time it was used as a palace.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893863532/in/set-72157644104270734" title="Leave no surface uncarved by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7028/13893863532_392ee084ec_c.jpg" width="800" height="601" alt="Leave no surface uncarved"></a>
-
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13916961855/in/set-72157644104270734" title="Beautiful patterns by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7353/13916961855_f16db6cb33_c.jpg" width="800" height="601" alt="Beautiful patterns"></a>
 
 I learned about an interesting restoration technique from one of the info
 boards, where they embed the new material used in restoration with a UV reactive
 substance, so it appears plain to the naked eye but can still be obvious which
 parts are truly original to the historians studying the structure.
 
-I went through the palace at a very slow pace, and at some point Rachel had
-arrived and caught up with me, and the two had moved through much quicker and
-finished well before us, so it was good that we'd organised to meet up somewhere
-later on if we got separated.
+<a href="http://www.flickr.com/photos/lucasthenomad/13916961855/in/set-72157644104270734" title="Beautiful patterns by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7353/13916961855_f16db6cb33_c.jpg" width="800" height="601" alt="Beautiful patterns"></a>
+
+I went through the palace at a very slow pace, and at some point Rachael had
+arrived and caught up with me, and the other two had moved through much quicker
+and finished well before us, so it was lucky that we'd organised to meet up
+somewhere later on if we got separated.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893925392/in/set-72157644104270734" title="Round courtyard by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2928/13893925392_1a7b0067cf_c.jpg" width="800" height="601" alt="Round courtyard"></a>
 
-Rachel and I ended up exploring the rest of the Alahabra grounds together. We
+Rachael and I ended up exploring the rest of the Alhambra grounds together. We
 found this huge square building that had a circular open courtyard in the
 middle, and now housed some museums and art galleries that we did an obligatory
 quick pass through.
@@ -152,27 +151,27 @@ one of the towers, and agreed to scrap that plan and organised something else.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893944911/in/set-72157644104270734" title="Waterjets by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7235/13893944911_34bb93d54d_c.jpg" width="800" height="601" alt="Waterjets"></a>
 
-The last part of the complex we visited was the Generlalife gardens, which
+The last part of the complex we visited was the Generalife gardens, which
 featured a lot of beautiful fountains and water gardens.
-
-<a href="http://www.flickr.com/photos/lucasthenomad/13917089765/in/set-72157644104270734" title="Garden fountain by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2932/13917089765_9f4cbb3592_c.jpg" width="800" height="601" alt="Garden fountain"></a>
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893979231/in/set-72157644104270734" title="The Water Stairway by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7133/13893979231_d013b17942_c.jpg" width="601" height="800" alt="The Water Stairway"></a>
 
-On the little booklet about the Alahabra it makes special mention of a
-water-staircase, so Rachel and I got it into out heads it would be something
+On the little map/booklet about the Alhambra it made special mention of a
+water-staircase, so Rachael and I got it into out heads it would be something
 quite impressive to behold. Instead it turned out to be a pretty plain old
 staircase with a little channel of water running down the hand-rail of either
 side, be we made up a story about how it must of at least be special royal
 water, not the regular peasant stuff they give to everyone else.
+
+<a href="http://www.flickr.com/photos/lucasthenomad/13917089765/in/set-72157644104270734" title="Garden fountain by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2932/13917089765_9f4cbb3592_c.jpg" width="800" height="601" alt="Garden fountain"></a>
 
 All the walking around the Alhambra had made us a bit hungry so we sought out
 somewhere to have a few beers and the free tapas they'd come with. We passed by
 a lot of places that seemed a little too fancy to offer a good beer and tapas
 deal, and eventually found a cute little place called Boabdil. It was a small
 place down a little alleyway, off another alleyway with very utilitarian decor.
-Stainless steel benches, fixed stools and bay-maries full of food. It turned out
-to be a great choice, with really tasty food and the drinks were only 1.70!
+Stainless steel benches, fixed stools and bain-maries full of food. It turned out
+to be a great choice, with really tasty food and the drinks were only €1.70!
 
 We got a message from Em and Connor and let them know where we were, so we could
 regroup and head the fountain, meeting place of the afternoon walking tour to
@@ -192,18 +191,17 @@ house."
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13917167763/in/set-72157644104270734" title="Now that looks like a cave home by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5163/13917167763_e40557b381_c.jpg" width="800" height="601" alt="Now that looks like a cave home"></a>
 
-We went right up the top where a church (?) with a nice wall to sit on was built,
+We went right up the top where a church (I think?) with a nice wall to sit on was built,
 where we could sit and watch the sun set.
 
-After the sun had set we walked down the back side of the hill, via
-the newer, less established area of caves. We learned that there's an old hippy
-dude way further over in the hills who's lived there for years and runs a little
-tetería there, a possible excursion for another day.
+<a href="http://www.flickr.com/photos/lucasthenomad/13894015226/in/set-72157644104270734" title="Jack, Rachael, Borja, Emily and Connor, watching the sunset by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7402/13894015226_a458e0d9de_c.jpg" width="800" height="601" alt="Jack, Rachael, Borja, Emily and Connor, watching the sunset"></a>
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13894015226/in/set-72157644104270734" title="Jack, Rachel, Borja, Emily and Connor, watching the sunset by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7402/13894015226_a458e0d9de_c.jpg" width="800" height="601" alt="Jack, Rachel, Borja, Emily and Connor, watching the sunset"></a>
+After the sun had set we walked down the back side of the hill, via the newer,
+less established area of caves. We learned that there's an old hippy dude way
+further over in the hills who's lived there for years and runs a little tetería
+there, a possible excursion for another day.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13893997112/in/set-72157644104270734" title="Epic sunset by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7396/13893997112_065be83db3_c.jpg" width="800" height="450" alt="Epic sunset"></a>
-
 
 After tour ended the group went on a little tapas crawl to various bars, in the
 interest of getting a good feed and a few drinks into us. The first place served
@@ -211,42 +209,42 @@ us awesome Spanish ham, with legs of ham hung up all around the place. The
 second gave us delicious cheese and more ham, so tasty that we stayed for a few
 rounds.
 
-<a href="http://www.flickr.com/photos/lucasthenomad/13917211833/in/set-72157644104270734" title="The Alhambra at night by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3706/13917211833_b89bf08c6d_c.jpg" width="800" height="450" alt="The Alhambra at night"></a>
-
 <a href="http://www.flickr.com/photos/lucasthenomad/13894038541/in/set-72157644104270734" title="Flamenco show by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7389/13894038541_a0f16743cd_c.jpg" width="800" height="601" alt="Flamenco show"></a>
 
 Next stop was a flamenco show at a little cave venue, for the princely sum of
-6E. It was worth seeing for the sake of saying you'd done it, but it wasn't
-really something I'd seek out again. The dancing is enthusiastic but I found the
-singing kind of whiny and not really to my liking, and the little cave/basement
-it was in was pretty dark and dingy.
+€6. It was worth seeing for the sake of saying you'd done it, but it wasn't
+really something I'd seek out again. The dancing is enthusiastic but this time
+around I found the singing kind of whiny and not all that enjoyable, and the
+little cave/basement it was in was pretty dark and dingy.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894058432/in/set-72157644104270734" title="Lovely gardens by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7074/13894058432_536c27a832_c.jpg" width="800" height="601" alt="Lovely gardens"></a>
 
 The next day I went up to explore the gardens just below the Alhambra with Em,
-Connor and Rachael. They were lovely and peaceful, any very well manicured.
+Connor and Rachael. They were lovely and peaceful, and very well manicured.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894089151/in/set-72157644104270734" title="Having tea at Ishmael's cave tetería by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7279/13894089151_0dac8cbf10_c.jpg" width="800" height="450" alt="Having tea at Ishmael's cave tetería"></a>
 
 After we'd finished exploring there, we decided to go and try and find the
-Tetería we'd been told about the evening before, run by the old hippy dude
+tetería we'd been told about the evening before, run by the old hippy dude
 Ismael. After stopping to ask the locals which path to take a few times we
 managed to find our way around the hill to to tetería which had a stunning view.
-
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894101056/in/set-72157644104270734" title="Fanciest tea + tapas ever! by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7273/13894101056_828b2b23a1_c.jpg" width="800" height="600" alt="Fanciest tea + tapas ever!"></a>
 
 We each had a tea which came out beautifully presented, each with it's own tasty
-fruit tapas sitting on top!
+fruit tapas sitting on top! Easily the fanciest tea I've ever had!
 
 In the evening Em and Connor had to go and meet up with someone who was giving
-them a lift to Seville, but Rachael and I went to try and find Nuestro bar, a
-place that a friend who lived here for a while had told me about.
+them a lift to Seville, but Rachael and I went to try and find Nuestro Bar, a
+place that a friend who lived here for a while had told me about that was
+supposed to have really great tapas.
 
-After walking for what seemed like forever we found the place. It would have
-been an ideal hangout for students (and backpackers!) on a tight budget. The
-drink prices were very cheap and the tapas consisted of fried food in fairly
-large serves, even if it was lacking a little in the quality department.
+<a href="http://www.flickr.com/photos/lucasthenomad/13917211833/in/set-72157644104270734" title="The Alhambra at night by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3706/13917211833_b89bf08c6d_c.jpg" width="800" height="450" alt="The Alhambra at night"></a>
+
+After walking for what seemed like forever we found the place. It seemed like an
+ideal hangout for students (and backpackers!) on a tight budget. The drink
+prices were very cheap and the tapas consisted of fried food in fairly large
+serves, even if it was lacking a little in the quality department.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894138352/in/set-72157644104270734" title="The Jewish district by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2909/13894138352_ae5d9cbba3_c.jpg" width="800" height="601" alt="The Jewish district"></a>
 
@@ -265,7 +263,7 @@ street art and found quite a few very nice pieces.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894207302/in/set-72157644104270734" title="Bicycle powered merry-go-round by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7409/13894207302_8c4727d226_c.jpg" width="800" height="601" alt="Bicycle powered merry-go-round"></a>
 
-We ventured past a Christmas market in which it seemed like all of the
+We ventured past a Christmas market at which it seemed like all of the
 children's rides were human powered, for example this merry-go-round was turned
 by a guy peddling a bicycle that was attached. Not sure if they're doing it to
 save money on a motor, or to be environmentally friendly, but it seemed pretty
@@ -277,14 +275,15 @@ We passed by the Cathedral and saw this very freaky looking street performer
 doing a "living statue" thing, which I stealthily took a photo of under the
 guise of taking a picture of the church. When we got to close to the cathedral
 some old gypsy ladies swarmed us, trying to give us rosemary, shouting stuff at
-us in Spanish. I didn't want a bar of it but Rachel initially accepted their
+us in Spanish. I didn't want a bar of it but Rachael initially accepted their
 rosemary before she realised they wanted money from her, and afterwards decided
-that they probably put a curse on her.
+that all the shouting they did at her was probably them putting a curse on her.
 
-At lunchtime we sought out a place serving Alahabra brand beer (I seem to have
-failed to note what the common beer was in my notes), and we found a great tapas
-place that gave us bacon wrapped cheese rolls, prawns, chorizo, and delicious
-spicy salty squid. I'm salivating just thinking about it.
+At lunchtime we sought out a place serving Alhambra brand beer (I seem to have
+failed to note what the common beer was in my notes, but it was some other
+beer), and we found a great tapas place that gave us bacon wrapped cheese rolls,
+prawns, chorizo, and delicious spicy salty squid. I'm salivating just thinking
+about them.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894696952/in/set-72157644104270734" title="Band jamming by Lucas the nomad, on Flickr"><img src="http://farm6.staticflickr.com/5030/13894696952_83c956412f_c.jpg" width="800" height="600" alt="Band jamming"></a>
 
@@ -295,7 +294,7 @@ buskers that included the singer dude from the band a few nights earlier.
 <a href="http://www.flickr.com/photos/lucasthenomad/13918252094/in/set-72157644104270734" title="Kings and knights patrolling by Lucas the nomad, on Flickr"><img src="http://farm8.staticflickr.com/7073/13918252094_7952020765_c.jpg" width="800" height="600" alt="Kings and knights patrolling"></a>
 
 Then a King and a bunch of knights happened to wander past us. Just your average
-day in Granada!
+afternoon in Granada!
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894721682/in/set-72157644104270734" title="Looking back towards Granada and the hill of cave homes by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2935/13894721682_474a0e52c5_c.jpg" width="800" height="450" alt="Looking back towards Granada and the hill of cave homes"></a>
 
@@ -306,7 +305,7 @@ side of the river too. Caves everywhere!
 <a href="http://www.flickr.com/photos/lucasthenomad/13894193162/in/set-72157644104270734" title="Caracol by Lucas the nomad, on Flickr"><img src="http://farm3.staticflickr.com/2939/13894193162_206b181be6_c.jpg" width="800" height="601" alt="Caracol"></a>
 
 Rachael and I went and tracked down a restaurant we passed on the walking tour
-the first day that served snails. Rachel, being a chef, wanted to see how the
+the first day that served snails. Rachael, being a chef, wanted to see how the
 Spanish served them, and I'm always eager to try strange foods. We did manage to
 find it, but it was disappointingly closed.
 
@@ -317,11 +316,12 @@ Babel tapas bar, which claimed to serve world fusion food. The food was great bu
 the service was pretty poor. It took use nearly two hours to get two drinks each
 and tapas. I happened to take a photo of the menu to give you an idea of the
 sorts of stuff you get to pick from when you're buying a beer in one of these
-places.
+places. I wish I'd thought to take more photos of stuff like this, and the tapas
+itself.
 
 <a href="http://www.flickr.com/photos/lucasthenomad/13894758262/in/set-72157644104270734" title="Giant bowl of snails by Lucas the nomad, on Flickr"><img src="http://farm4.staticflickr.com/3732/13894758262_17d7c170de_c.jpg" width="600" height="800" alt="Giant bowl of snails"></a>
 
-We ended up going back to the ultra budget place from the previous day, in which
+We ended up going back to the cheap and tiny place from the previous day, in which
 the very cheerful bartender was quick to serve us drinks and delicious tapas.
 We saw they offered snails as a non-tapas dish, so we ordered a serve to try
 them. What came out what a giant bowl full of snails, probably 40+ of them. I
