--- a/source/_posts/2014-04-20-granada.markdown
+++ b/source/_posts/2014-04-20-granada.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "Granada"
 date: 2014-04-20 17:07
-tags: Granada, Spain, Alhambra
+tags: Granada, Spain, Alhambra, Andalusia, Tapas
 description:
 published: false
 priority: 0.5
